# psemu

./: .gitignore  Cargo.toml
src/: app.rs  bus.rs  debug.rs  debugger.rs  dma.rs  emulator.rs  executable.rs  interrupts.rs  joy.rs  main.rs  ram.rs  rom.rs  scratchpad.rs
src/cdrom/: cuebin.rs  mod.rs  reader.rs
src/cpu/: arith.rs  branch.rs  control.rs  control_types.rs  cop.rs  instruction.rs  load_store.rs  logic.rs  memory.rs  mod.rs  test_utils.rs
src/cpu/gte/: division.rs  mod.rs  operations.rs
src/debugger/: commands.rs  mod.rs
src/gpu/: mod.rs
src/spu/: gauss.rs  mod.rs  voice.rs
src/timers/: mod.rs
test-programs/ch-03.3/: Makefile  expected-output.txt  main.s
test-programs/ch-03.4/: Makefile  main.s
test-roms/ch-2.3/: rom  stress-test.s
test-roms/ch-3.2/: Makefile
test-roms/ch-3.3/: Makefile  rom  stress-test.s
test-roms/ch-3.4/: Makefile  part1  part1.s
test-roms/ch-5/factorial/: Cargo.toml
test-roms/ch-5/factorial/src/: main.rs
test-roms/ch-5/fibonacci/: Cargo.toml
test-roms/ch-5/fibonacci/src/: main.rs
test-roms/ch-5/hello-world/: Cargo.toml
test-roms/ch-5/hello-world/src/: main.rs
test-roms/ch-5/pi/: Cargo.toml
test-roms/ch-5/pi/src/: main.rs
